# doc-link

./: .env.example  .gitignore  .mcp.json  AUDIT.md  CollabEditor.tsx  DECISIONS.md  DESIGN_DECISIONS.md  PRODUCTION_READINESS.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 340f7a3d4015_merge_heads_branch_a_pads_name_index_.py  56b702ce2307_initial_schema.py  610b7d4ad610_auth_display_name_is_archived.py  726857c6f636_pad_display_name.py  a7b8c9d0e1f2_email_tokens.py  b2c3d4e5f6a7_pin_protected_pads.py  c3d4e5f6a7b8_pad_name_index.py  dcd7e589eb1b_files_table.py  e5f8b2c3d4a1_add_pad_collaborators.py  f1a2b3c4d5e6_pad_cold_storage_eligible.py  g2h3i4j5k6l7_add_username_to_users.py  h3i4j5k6l7m8_add_previous_names_to_pads.py  i9j0k1l2m3n4_redirects_and_claim_tokens.py
backend/app/: main.py
backend/app/api/: auth.py  deps.py  files.py  pads.py  ws.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  file.py  pad.py  token.py  user.py
backend/app/schemas/: auth.py  file.py  pad.py
backend/tests/: conftest.py  test_auth_api.py  test_auth_recovery_api.py  test_client_ip.py  test_coldstorage.py  test_crdt.py  test_email_service.py  test_files_api.py  test_files_authz.py  test_health.py  test_naming_redirects.py  test_pad_management_api.py  test_pads_api.py  test_pin_api.py  test_ratelimit.py  test_slug.py  test_storage.py  test_supabase_auth_api.py  test_user_profile.py  test_visibility_api.py  test_ws_auth.py
(+65 files in other folders)
